--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- for Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
-      body{font-family: "Courier New", monospace;}
+      body{font-family: Arial, sans-serif;}
     @font-face {
     font-family: 'silkscreennormal';
     src: url('slkscr-webfont.eot');
@@ -25,8 +25,8 @@
     font-weight: normal;
     font-style: normal;
   }
-  h1{font-family: "silkscreennormal", "Courier New", monospace;}
-  button{font-family: "Courier New", monospace;}
+  h1{font-family: "silkscreennormal", Arial, sans-serif;}
+  button{font-family: Arial, sans-serif;}
   #theText{background-color: gray;}
   .footer {margin-top: 20%; margin-bottom: 5%;}
   ::placeholder {color: white;}
